--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/portal
 spring.datasource.username=root
 spring.datasource.password=testertes
+server.port=8888
