frontend opzet met Auth0 beveiliging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/portal
 spring.datasource.username=root
 spring.datasource.password=testertes
 server.port=8888
+security.oauth2.resource.id=http://localhost:8888
+security.oauth2.resource.jwk.keySetUri=https://dev-gzkbp1-e.eu.auth0.com/.well-known/jwks.json
