--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
+	ext.kotlin_version = '1.3.50'
 	repositories {
 		mavenCentral()
 	}
 	dependencies{
 		classpath 'org.jooq:jooq-codegen:3.12.3'
 		classpath 'org.flywaydb:flyway-core:3.2.1'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 	}
 }
 
@@ -13,6 +15,7 @@ plugins {
 	id 'java'
 	id "nu.studer.jooq" version "3.0.3"
 	id "org.flywaydb.flyway" version "6.0.8"
+	id "org.jetbrains.kotlin.plugin.spring" version "1.3.50"
 }
 
 
@@ -21,6 +24,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'kotlin'
 
 repositories {
 	mavenCentral()
@@ -40,6 +44,8 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.3.0'
 	//springtest
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+	implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.3.RELEASE'
 }
 
 def generatedDir = 'src/main/generated'
@@ -104,3 +110,13 @@ clean.doLast {
 
 generatePortalJooqSchemaSource.dependsOn flywayMigrate
 compileJava.dependsOn generatePortalJooqSchemaSource
+compileKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
+compileTestKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
